# mcp-client-ollama

./: pyproject.toml
.github/workflows/: ci.yml  dependency-review.yml  publish.yml
