[project]
name = "mcp-client-for-ollama"
version = "0.15.1"
description = "MCP Client for Ollama - A client for connecting to Model Context Protocol servers using Ollama"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Jonathan Löwenstern"}
]
dependencies = [
    "mcp>=1.12.0",
    "ollama==0.5.4",
    "prompt-toolkit>=3.0.51",
    "rich>=14.0.0",
    "typer>=0.12.0",
]

[project.scripts]
mcp-client-for-ollama = "mcp_client_for_ollama.cli:run_cli"
ollmcp = "mcp_client_for_ollama.cli:run_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/jonigl/mcp-client-for-ollama"
Issues = "https://github.com/jonigl/mcp-client-for-ollama/issues"

[tool.setuptools]
packages = ["mcp_client_for_ollama", "mcp_client_for_ollama.config", "mcp_client_for_ollama.models", "mcp_client_for_ollama.server", "mcp_client_for_ollama.tools", "mcp_client_for_ollama.utils"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
